fix: change desktop clock label color to white for better visibility

--- a/styles/common/_widgets.scss
+++ b/styles/common/_widgets.scss
@@ -180,7 +180,7 @@
 
     label {
       @extend %desktop-widget;
-
+      color: #ffffff;
       font-weight: 400;
     }
 
